# titanic

./: .gitignore  README.md  pyproject.toml  requirements.txt
serve/: app.py
tests/unit/: test_custom_functions.py  test_transformers.py
titanic/: pyproject.toml  titanic_classifier.py
titanic/estimators/: titanic_classifier.pkl
titanic/utils/: custom_functions.py  models.py  pipelines.py  transformers.py
