[tool.poetry]
name = "titanic"
version = "1"
description = ""
authors = ["yahirhdz18 <yahir_hm18@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
path = "^16.5.0"
pydantic = "^1.10.2"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
