[tool.poetry]
name = "train"
version = "0.1.0"
description = "Training package for titanic classification model."
authors = ["yahirhdz18 <yahir_hm18@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.1"
joblib = "^1.2.0"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
